# tinyllama-x

./: .dockerignore  .gitignore  .yamllint  CHANGELOG.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE.md  LICENSE  Makefile  README.md  README.ubopt.md  TEST-RELEASE-CHECKLIST.md  ai_terminal.sh  ai_terminal_llama.sh  ai_terminal_llama_auto.sh  ai_terminal_llama_final.sh  ai_terminal_llama_simple.sh  ai_terminal_llama_smart.sh  create-policy-files.ps1  llama-chat-old.py  llama-chat-pro-old.py  llama-chat-pro-v2-old.py  llama-chat-pro-v3.py  pyproject.toml  requirements.txt  run-llama.py  run-tinyllama.py  test_intelligence.py  tinyllama_x_smart.py
.github/workflows/: ci.yml  container.yml  release.yml  shellcheck.yml  test.yml
cmd/: ubopt
config/: features.yaml  policies.yaml
docs/: ARCHITECTURE.md  CLI.md  README.txt  README.ubopt.md
etc/ubopt/: config.json  ubopt.example.yaml
gitops/: README.txt
gitops/kustomize/base/: kustomization.yaml
gui/tauri/: .gitignore  README.md  package.json  vite.config.js
gui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/tauri/src-tauri/src/: main.rs
lib/: __init__.py  common.sh  distro.py  executor.py  history.py  intent.py  pm_adapter.py  rag.py
man/: tinyllamax.1
modules/: backup.sh  benchmark.sh  hardening.sh  health.sh  logging.sh  update.sh
packaging/logrotate/: ubopt
policy/podsecurity/: tinyllamax-podsecurity.yaml
providers/: apt.sh  dnf.sh  pacman.sh
resources/: tinyllama-x.desktop  tinyllamax.desktop
resources/keys/: cosign.pub
scripts/: README.md  build_image.sh  build_wheel.sh  generate_provenance.sh  generate_sbom.sh  install_ubuntu.sh  make_appimage.sh  make_deb.sh  make_rpm.sh  push_image.sh  sign_artifacts.sh  uninstall_ubuntu.sh  validate_pm_dry_run.py
systemd/: ubopt-agent.service  ubopt-agent.timer  ubopt.service  ubopt.timer
tests/: test_adapters.py  test_distro_utils.py  test_fake_backend.py  test_gui_presenter.py  test_history.py  test_imports.py  test_intent_decider.py  test_intents.py  test_planner.py  test_rag.py
tests/bats/: cli.bats  health.bats  modules.bats  providers.bats  update-dryrun.bats
tinyllamax/: README.md  __init__.py  cli.py  config.py  models.py
tinyllamax/adapters/: __init__.py  apk.py  apt.py  base.py  dnf.py  factory.py  pacman.py  zypper.py
tinyllamax/core/: history.py  intents.py  model.py  planner.py  prompts.py  rag.py
tinyllamax/gui/: __init__.py  gtk_app.py  presenter.py  services.py
tinyllamax/model_backends/: fake.py  interface.py  llamacpp.py  ollama.py
tinyllamax/utils/: distro.py  shell.py
tools/: README.txt
(+2 files in other folders)
