[project]
name = "tinyllamax"
version = "0.1.0"
description = "Typer/Pydantic CLI utilities for TinyLlama-X"
authors = [{ name = "TinyLlama-X", email = "dev@example.com" }]
readme = "tinyllamax/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
]

[project.scripts]
tinyllamax = "tinyllamax.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "ARG"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.typer]  # placeholder
script-name = "tinyllamax"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
