[project]
name = "tinyllamax"
version = "0.1.0"
description = "AI Linux Co-Pilot (propose → simulate → confirm → run)"
authors = [{ name = "TinyLlama-X", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
]

[project.scripts]
tinyllamax = "tinyllamax.cli:app"

[project.optional-dependencies]
gui = ["PyGObject>=3.42.0"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.typer]  # placeholder
script-name = "tinyllamax"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tinyllamax", "tinyllamax.adapters", "tinyllamax.core", "tinyllamax.model_backends", "tinyllamax.utils"]
