[package]
name = "tinyllama-x-tauri"
version = "0.1.0"
description = "TinyLlama-X Tauri Desktop App"
authors = ["TinyLlama-X"]
license = "MIT"
repository = "https://github.com/120git/tinyllama-x"
edition = "2021"

# Tauri build configuration
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Tauri features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
